# mcp-demos

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
mcp_client/: main.py
mcp_server/: main.py
mcp_server/tools/: weather.py
mcp_server/utils/: server.py  weather.py
tests/: conftest.py  helpers.py  test_main.py  test_server.py  test_tools.py  test_weather.py
tests/utils/: simple_sse_client.py
