[project]
name = "mcp-demos"
version = "0.1.0"
description = "Demonstrations using Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.5.2",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
